--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -38,26 +38,43 @@ jobs:
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v2
 
-    - name: Set up Sccache
-      uses: taiki-e/install-action@v2.33.28
+    - name: Set up Rust
+      uses: actions-rs/toolchain@v1
       with:
-        tool: sccache
-        checksum: true
+        toolchain: stable
+        override: true
+    
+    - name: Install sccache
+      run: |
+        cargo install sccache
+        mkdir -p ${{ github.workspace }}/sccache-cache
+        echo "export SCCACHE_DIR=${{ github.workspace }}/sccache-cache" >> $GITHUB_ENV
+        echo "export RUSTC_WRAPPER=${{ github.workspace }}/.cargo/bin/sccache" >> $GITHUB_ENV
+
+    - name: Copy files into Docker build context
+      run: |
+        cp -r ${GITHUB_ENV.RUSTC_WRAPPER} ${GITHUB_WORKSPACE}/build-context
+
+#    - name: Set up Sccache
+ #     uses: taiki-e/install-action@v2.33.28
+  #    with:
+   #     tool: sccache
+    #    checksum: true
   
-    - name: Cache sccache    
-      uses: actions/cache@v2
-      with:
-        path: /sccache
-        key: ${{ runner.os }}-sccache-${{ github.sha }}
-        restore-keys: |
-          ${{ runner.os }}-sccache-
+  #  - name: Cache sccache    
+   #   uses: actions/cache@v2
+    #  with:
+     #   path: /sccache
+      #  key: ${{ runner.os }}-sccache-${{ github.sha }}
+       # restore-keys: |
+        #  ${{ runner.os }}-sccache-
 
     - name: Build Docker image
       uses: docker/build-push-action@v4
       with:
         context: .
         build-args: |
-          SCCACHE_DIR=/sccache
-          RUSTC_WRAPPER=sccache
+          SCCACHE_DIR=${GITHUB_ENV.SCCACHE_DIR}
+          RUSTC_WRAPPER=${GITHUB_ENV.RUSTC_WRAPPER}
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
