--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -38,10 +38,6 @@ jobs:
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v2
 
-    - uses: dtolnay/rust-toolchain@stable
-    - uses: cargo-bins/cargo-binstall@main
-    - run: cargo binstall -y sccache
-
     - name: Install Rust
       uses: actions-rs/toolchain@v1
       with:
@@ -52,8 +48,8 @@ jobs:
     - name: Configure sccache env var and set build profile to ephemeral build
       run: | 
           echo "RUSTC_WRAPPER=sccache" >> $GITHUB_ENV
-          echo “SCCACHE_GHA_ENABLED=true" >> $GITHUB_ENV
-          echo “RUSTFLAGS=’--cfg profile=ephemeral-build’” >> $GITHUB_ENV
+          echo "SCCACHE_GHA_ENABLED=true" >> $GITHUB_ENV
+          echo "RUSTFLAGS='--cfg profile=ephemeral-build'" >> $GITHUB_ENV
 
     - name: Run sccache-cache
       uses: mozilla-actions/sccache-action@v0.0.2
