--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -38,21 +38,11 @@ jobs:
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v2
 
-    - name: Install Rust
-      uses: actions-rs/toolchain@v1
+    - name: Set up Sccache
+      uses: taiki-e/install-action@v2.33.28
       with:
-          toolchain: stable
-          override: true
-          target: x86_64-unknown-linux-musl
-
-    - name: Configure sccache env var and set build profile to ephemeral build
-      run: | 
-          echo "RUSTC_WRAPPER=sccache" >> $GITHUB_ENV
-          echo "SCCACHE_GHA_ENABLED=true" >> $GITHUB_ENV
-          echo "RUSTFLAGS='--cfg profile=ephemeral-build'" >> $GITHUB_ENV
-
-    - name: Run sccache-cache
-      uses: mozilla-actions/sccache-action@v0.0.2
+        tool: sccache
+        checksum: true
 
     - name: Build Docker image
       uses: docker/build-push-action@v4
