--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -48,6 +48,6 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: .
-        build-args: RUSTC_WRAPPER=${{ env.RUSTC_WRAPPER }}
+        build-args: RUSTC_WRAPPER=${{ github.workspace }}/.cargo/bin/sccache
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
