--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,11 +13,11 @@ env:
   RUSTUP_MAX_RETRIES: 2
   RUST_BACKTRACE: short
   CARGO_REGISTRIES_CRATES_IO_PROTOCOL: sparse
-
+  CARGO_DIR: temp/cargo
+  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -30,9 +30,37 @@ jobs:
       with:
         path: |
           /tmp/.buildx-cache
-        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        key: |
+          ${{ runner.os }}-buildx-${{ github.sha }}
         restore-keys: |
           ${{ runner.os }}-buildx-
+    
+    - name: Configure Cache Env
+      uses: actions/github-script@v7
+      with:
+        script: |
+          core.exportVariable('ACTIONS_CACHE_URL', process.env.ACTIONS_CACHE_URL || '');
+          core.exportVariable('ACTIONS_RUNTIME_TOKEN', process.env.ACTIONS_RUNTIME_TOKEN || '')    
+    
+    - name: Install sccache
+      uses: taiki-e/install-action@v2.33.28
+      with:
+        tool: sccache
+        checksum: true
+    
+    - name: Cache dependencies
+      uses: actions/cache@v2
+      with:
+        path: ~/.cache/sccache
+        key: ${{ runner.os }}-sccache-${{ hashFiles('**/Cargo.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-sccache-
+            
+    - name: Create cargo directory and add files
+      run: |
+        mkdir -p ${{ env.CARGO_DIR }}
+        # cat ~/.config/sccache/config
+        cp /usr/local/bin/sccache ${{ env.CARGO_DIR }}
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v2
@@ -41,5 +69,9 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: .
+        build-args: |
+          CARGO_DIR=${{ env.CARGO_DIR }}
+          ACTIONS_CACHE_URL=${{ env.ACTIONS_CACHE_URL }}
+          ACTIONS_RUNTIME_TOKEN=${{ env.ACTIONS_RUNTIME_TOKEN }}
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
