--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -47,19 +47,11 @@ jobs:
       with:
         tool: sccache
         checksum: true
-    
-    - name: Cache dependencies
-      uses: actions/cache@v2
-      with:
-        path: ~/.cache/sccache
-        key: ${{ runner.os }}-sccache-${{ hashFiles('**/Cargo.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-sccache-
             
     - name: Create cargo directory and add files
       run: |
         mkdir -p ${{ env.CARGO_DIR }}
-        # cat ~/.config/sccache/config
+        cat /hom/runner/.config/sccache/config
         cp /home/runner/.cargo/bin/sccache ${{ env.CARGO_DIR }}
 
     - name: Set up QEMU
